Add Solutions for patterns 6 to 16 in Practice File 2

--- a/Pattern Questions for Practice 2 Solutions.ipynb
+++ b/Pattern Questions for Practice 2 Solutions.ipynb
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3d837bc4",
+   "id": "f7fd25e2",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e08bd941",
+   "id": "275cb661",
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "af5af479",
+   "id": "8f94d392",
    "metadata": {},
    "outputs": [
     {
@@ -317,6 +317,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 6:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 5</h2>\n",
     "*                       *\n",
     "   *                 *\n",
     "*     *           *     *\n",
@@ -334,18 +335,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f8c60705",
+   "execution_count": 9,
+   "id": "585ea490",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "*                       *\n",
+      "   *                 *   \n",
+      "*     *           *     *\n",
+      "   *     *     *     *   \n",
+      "*     *     *     *     *\n",
+      "   *     *     *     *   \n",
+      "*     *           *     *\n",
+      "   *                 *   \n",
+      "*                       *\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "\n",
+    "for row in range(2*n-1):\n",
+    "    if row < n:\n",
+    "        left = row + 2*(row+1)-1\n",
+    "        right = 5*(n-1)+n - left\n",
+    "    else:\n",
+    "        left -= 3\n",
+    "        right += 3\n",
+    "        \n",
+    "    if row%2==0:\n",
+    "        star = 0\n",
+    "    else:\n",
+    "        star = 3\n",
+    "    for col in range(5*(n-1)+n):\n",
+    "        if left<=col<right:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            if col==star:\n",
+    "                print('*', end='')\n",
+    "                if col==left-1 and row!=n-1:\n",
+    "                    star = right\n",
+    "                else:\n",
+    "                    star += 6\n",
+    "            else:\n",
+    "                print(' ', end='')\n",
+    "    print()\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "f4b23dd7",
    "metadata": {},
    "source": [
-    "##### <!DOCTYPE html>\n",
+    "<!DOCTYPE html>\n",
     "<html>\n",
     "<head>\n",
     "</head>\n",
@@ -353,6 +399,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 7:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 5</h2>\n",
     "    *\n",
     "   *\n",
     "  * \n",
@@ -369,6 +416,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "b3116260",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "    *\n",
+      "   *\n",
+      "  *\n",
+      " *\n",
+      "*********\n",
+      " *\n",
+      "  *\n",
+      "   *\n",
+      "    *\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(2*n-1):\n",
+    "    if row<n-1:\n",
+    "        spaces = n-row-1\n",
+    "        star = 1\n",
+    "    elif row==n-1:\n",
+    "        spaces -= 1\n",
+    "        star = 2*n-1\n",
+    "    else:\n",
+    "        spaces += 1\n",
+    "        star = 1\n",
+    "    for col in range(spaces):\n",
+    "        print(' ', end='')\n",
+    "    for col in range(star):\n",
+    "        print('*', end='')\n",
+    "    print()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ca0c7ca5",
    "metadata": {},
@@ -381,6 +470,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 8:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 5</h2>\n",
     "* \n",
     "** \n",
     "* * \n",
@@ -390,6 +480,36 @@
     "</pre>\n",
     "</body>\n",
     "</html>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "b57fca8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "*\n",
+      "**\n",
+      "* *\n",
+      "*  *\n",
+      "*****\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(row+1):\n",
+    "        if col in [0, row] or row == n-1:\n",
+    "            print('*', end='')\n",
+    "        else:\n",
+    "            print(' ', end='')\n",
+    "    print()"
    ]
   },
   {
@@ -405,6 +525,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 9:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 5</h2>\n",
     "    *\n",
     "   **\n",
     "  ***\n",
@@ -421,6 +542,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "5bde03a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "    *\n",
+      "   **\n",
+      "  ***\n",
+      " ****\n",
+      "*****\n",
+      " ****\n",
+      "  ***\n",
+      "   **\n",
+      "    *\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(2*n-1):\n",
+    "    if row<n:\n",
+    "        spaces = n-row-1\n",
+    "    else:\n",
+    "        spaces += 1\n",
+    "    for col in range(n):\n",
+    "        if col<spaces:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print('*', end='')\n",
+    "    print()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "93d842ad",
    "metadata": {},
@@ -433,6 +592,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 10:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 4</h2>\n",
     "      *           \n",
     "    *   *        \n",
     "  *       *      \n",
@@ -441,6 +601,35 @@
     "</pre>\n",
     "</body>\n",
     "</html>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "e7dae82b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 4\n",
+      "   *\n",
+      "  * *\n",
+      " *   *\n",
+      "*     *\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(n+row):\n",
+    "        if col in [n-row-1, n+row-1]:\n",
+    "            print('*', end='')\n",
+    "        else:\n",
+    "            print(' ', end='')\n",
+    "    print()"
    ]
   },
   {
@@ -456,6 +645,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 11:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 6</h2>\n",
     "          *\n",
     "         *\n",
     "        *\n",
@@ -474,6 +664,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "5c9bcbbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 6\n",
+      "          *\n",
+      "         *\n",
+      "        *\n",
+      "       *\n",
+      "      *\n",
+      "     *\n",
+      "    *\n",
+      "   *\n",
+      "  *\n",
+      " *\n",
+      "*\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(2*n-1):\n",
+    "    for col in range((2*n-1)-row):\n",
+    "        if col==(2*(n-1)-row):\n",
+    "            print('*', end='')\n",
+    "        else:\n",
+    "            print(' ', end='')\n",
+    "    print()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "be14eae6",
    "metadata": {},
@@ -486,6 +712,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 12:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 4</h2>\n",
     "*           *   \n",
     "  *       *      \n",
     "    *   *         \n",
@@ -497,6 +724,38 @@
     "</pre>\n",
     "</body>\n",
     "</html>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "bf4404b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 4\n",
+      "*     *\n",
+      " *   * \n",
+      "  * *  \n",
+      "   *   \n",
+      "  * *  \n",
+      " *   * \n",
+      "*     *\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(2*n-1):\n",
+    "    for col in range(2*n-1):\n",
+    "        if col in [row, 2*(n-1)-row]:\n",
+    "            print('*', end='')\n",
+    "        else:\n",
+    "            print(' ', end='')\n",
+    "    print()"
    ]
   },
   {
@@ -512,6 +771,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 13:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 5</h2>\n",
     "*\n",
     "**\n",
     "****\n",
@@ -521,6 +781,33 @@
     "</pre>\n",
     "</body>\n",
     "</html>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "602d3bfc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "*\n",
+      "**\n",
+      "****\n",
+      "********\n",
+      "****************\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(0, n):\n",
+    "    for col in range(2**row):\n",
+    "        print('*', end='')\n",
+    "    print()"
    ]
   },
   {
@@ -536,6 +823,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 14:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 4</h2>\n",
     "   ****\n",
     "  ****\n",
     " ****\n",
@@ -544,6 +832,35 @@
     "</pre>\n",
     "</body>\n",
     "</html>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "5d0617da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 4\n",
+      "   ****\n",
+      "  ****\n",
+      " ****\n",
+      "****\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(2*n-1-row):\n",
+    "        if col < n-row-1:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print('*', end='')\n",
+    "    print()"
    ]
   },
   {
@@ -559,6 +876,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 15:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 4</h2>\n",
     "   ****\n",
     "  *  *\n",
     " *  *\n",
@@ -567,6 +885,35 @@
     "</pre>\n",
     "</body>\n",
     "</html>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "92d695e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 4\n",
+      "   ****\n",
+      "  *  *\n",
+      " *  *\n",
+      "****\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(2*n-1-row):\n",
+    "        if row in [0, n-1] and col>=n-row-1 or col in [n-row-1, 2*(n-1)-row]:\n",
+    "            print('*', end='')\n",
+    "        else:\n",
+    "            print(' ', end='')\n",
+    "    print()"
    ]
   },
   {
@@ -582,6 +929,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 16:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 4</h2>\n",
     "*           *   \n",
     "  *       *      \n",
     "    *   *         \n",
@@ -590,6 +938,35 @@
     "</pre>\n",
     "</body>\n",
     "</html>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "ebbcedd5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 4\n",
+      "*           *\n",
+      "  *       *\n",
+      "    *   *\n",
+      "      *\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(4*n-3-2*row):\n",
+    "        if col in [2*row, 4*(n-1)-2*row]:\n",
+    "            print('*', end='')\n",
+    "        else:\n",
+    "            print(' ', end='')\n",
+    "    print()"
    ]
   },
   {
