Add Solutions for patterns 17 to 19 in Practice File 2

--- a/Pattern Questions for Practice 2 Solutions.ipynb
+++ b/Pattern Questions for Practice 2 Solutions.ipynb
@@ -982,6 +982,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 17:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 4</h2>\n",
     "*         *\n",
     "***     ***\n",
     "***** *****\n",
@@ -990,6 +991,36 @@
     "</pre>\n",
     "</body>\n",
     "</html>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "c059c3e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 4\n",
+      "*         *\n",
+      "***     ***\n",
+      "***** *****\n",
+      "***********\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "m = 4*n-5\n",
+    "for row in range(n):\n",
+    "    for col in range(m):\n",
+    "        if 2*row+1 <= col < m-(2*row+1):\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print('*', end='')\n",
+    "    print()"
    ]
   },
   {
@@ -1005,6 +1036,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 18:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 4</h2>\n",
     "*******\n",
     "*     *\n",
     "*     *\n",
@@ -1013,6 +1045,35 @@
     "</pre>\n",
     "</body>\n",
     "</html>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "23dee82f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 4\n",
+      "*******\n",
+      "*     *\n",
+      "*     *\n",
+      "*******\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(2*n-1):\n",
+    "        if row in [0, n-1] or col in [0, 2*(n-1)]:\n",
+    "            print('*', end='')\n",
+    "        else:\n",
+    "            print(' ', end='')\n",
+    "    print()"
    ]
   },
   {
@@ -1028,6 +1089,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 19:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 8</h2>\n",
     "       *\n",
     "      * *\n",
     "     *   *\n",
@@ -1043,6 +1105,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "450631ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 8\n",
+      "       *       \n",
+      "      * *      \n",
+      "     *   *     \n",
+      "    *     *    \n",
+      "   *       *   \n",
+      "  *         *  \n",
+      " *           * \n",
+      "* * * * * * * *\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(2*n-1):\n",
+    "        if col in [n-row-1, n+row-1] or row==n-1 and col%2==0:\n",
+    "            print('*', end='')\n",
+    "        else:\n",
+    "            print(' ', end='')\n",
+    "    print()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2c9f9b65",
    "metadata": {},
@@ -1055,6 +1150,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 20:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 4</h2>\n",
     "*\n",
     "  * *\n",
     "    * * *\n",
