--- a/Pattern Questions for Practice 2 Solutions.ipynb
+++ b/Pattern Questions for Practice 2 Solutions.ipynb
@@ -1165,6 +1165,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f6be855b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 4\n",
+      "*\n",
+      " **\n",
+      "  ***\n",
+      "   ****\n",
+      "  ***\n",
+      " **\n",
+      "*\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(2*n-1):\n",
+    "    if row < n:\n",
+    "        stars = 2*row+1\n",
+    "        spaces = 2*row\n",
+    "    else:\n",
+    "        stars -= 2\n",
+    "        spaces -= 1\n",
+    "    for col in range(stars):\n",
+    "        if col < spaces:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print('*', end='')\n",
+    "    print()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2211caef",
    "metadata": {},
@@ -1177,6 +1215,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 21:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 5</h2>\n",
     "    *\n",
     "     *\n",
     "      *\n",
@@ -1193,6 +1232,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1a98d7b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "    *\n",
+      "     *\n",
+      "      *\n",
+      "       *\n",
+      "*********\n",
+      "       *\n",
+      "      *\n",
+      "     *\n",
+      "    *\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(2*n-1):\n",
+    "    if row < n:\n",
+    "        stars = n + row\n",
+    "    else:\n",
+    "        stars -= 1\n",
+    "    for col in range(stars):\n",
+    "        if col==stars-1 or row==n-1:\n",
+    "            print('*', end='')\n",
+    "        else:\n",
+    "            print(' ', end='')\n",
+    "    print()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e9207480",
    "metadata": {},
@@ -1205,6 +1282,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 22:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 3</h2>\n",
     "  *\n",
     "  *\n",
     "*****\n",
@@ -1214,6 +1292,40 @@
     "</pre>\n",
     "</body>\n",
     "</html>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "2421d5f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 3\n",
+      "  *\n",
+      "  *\n",
+      "*****\n",
+      "  *\n",
+      "  *\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(2*n-1):\n",
+    "    if row == n-1:\n",
+    "        stars = 2*n-1\n",
+    "    else:\n",
+    "        stars = n\n",
+    "    for col in range(stars):\n",
+    "        if col==stars-1 or row==n-1:\n",
+    "            print('*', end='')\n",
+    "        else:\n",
+    "            print(' ', end='')\n",
+    "    print()"
    ]
   },
   {
@@ -1229,6 +1341,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 23:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 4</h2>\n",
     "*   *   \n",
     "*  *      \n",
     "* *         \n",
@@ -1240,6 +1353,42 @@
     "</pre>\n",
     "</body>\n",
     "</html>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "9aa7b664",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 4\n",
+      "*   *\n",
+      "*  *\n",
+      "* *\n",
+      "**\n",
+      "* *\n",
+      "*  *\n",
+      "*   *\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(2*n-1):\n",
+    "    if row < n:\n",
+    "        stars = n-row+1\n",
+    "    else:\n",
+    "        stars += 1\n",
+    "    for col in range(stars):\n",
+    "        if col in [0, stars-1]:\n",
+    "            print('*', end='')\n",
+    "        else:\n",
+    "            print(' ', end='')\n",
+    "    print()"
    ]
   },
   {
@@ -1255,6 +1404,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 24:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 5</h2>\n",
     "* * * * *\n",
     "*     *\n",
     "*   *\n",
@@ -1264,6 +1414,36 @@
     "</pre>\n",
     "</body>\n",
     "</html>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "e3c40606",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "*****\n",
+      "*  *\n",
+      "* *\n",
+      "**\n",
+      "*\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(n-row):\n",
+    "        if col in [0, n-row-1] or row==0:\n",
+    "            print('*', end='')\n",
+    "        else:\n",
+    "            print(' ', end='')\n",
+    "    print()"
    ]
   },
   {
@@ -1279,6 +1459,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 25:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 5</h2>\n",
     "1\n",
     "01\n",
     "101\n",
@@ -1288,6 +1469,36 @@
     "</pre>\n",
     "</body>\n",
     "</html>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "f5e80670",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "1\n",
+      "10\n",
+      "101\n",
+      "1010\n",
+      "10101\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(row+1):\n",
+    "        if col%2==0:\n",
+    "            print('1', end='')\n",
+    "        else:\n",
+    "            print('0', end='')\n",
+    "    print()"
    ]
   },
   {
@@ -1303,6 +1514,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 26:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 5</h2>\n",
     "1 \n",
     "2 2 \n",
     "3 3 3 \n",
@@ -1312,6 +1524,36 @@
     "</pre>\n",
     "</body>\n",
     "</html>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "e756d855",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "1\n",
+      "2 2\n",
+      "3 3 3\n",
+      "4 4 4 4\n",
+      "5 5 5 5 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(2*row+1):\n",
+    "        if col%2==0:\n",
+    "            print(row+1, end='')\n",
+    "        else:\n",
+    "            print(' ', end='')\n",
+    "    print()"
    ]
   },
   {
@@ -1327,6 +1569,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 27:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 5</h2>\n",
     "    1\n",
     "   123\n",
     "  12345\n",
@@ -1343,6 +1586,45 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "80fa1418",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "    1\n",
+      "   123\n",
+      "  12345\n",
+      " 1234567\n",
+      "123456789\n",
+      " 1234567\n",
+      "  12345\n",
+      "   123\n",
+      "    1\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(2*n-1):\n",
+    "    if row < n:\n",
+    "        num = 2*row+1\n",
+    "        spaces = n-row-1\n",
+    "    else:\n",
+    "        num -= 2\n",
+    "        spaces += 1\n",
+    "    for col in range(spaces):\n",
+    "        print(' ', end='')\n",
+    "    for col in range(1,num+1):\n",
+    "        print(col, end='')\n",
+    "    print()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0bc8f946",
    "metadata": {},
@@ -1355,6 +1637,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 28:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 5</h2>\n",
     "1 \n",
     "1 2 \n",
     "1 2 3 \n",
@@ -1364,6 +1647,38 @@
     "</pre>\n",
     "</body>\n",
     "</html>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "ccd89f9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "1\n",
+      "1 2\n",
+      "1 2 3\n",
+      "1 2 3 4\n",
+      "1 2 3 4 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    num = 1\n",
+    "    for col in range(2*row+1):\n",
+    "        if col%2 == 0:\n",
+    "            print(num, end='')\n",
+    "            num += 1\n",
+    "        else:\n",
+    "            print(' ', end='')\n",
+    "    print()"
    ]
   },
   {
@@ -1379,6 +1694,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 29:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 4</h2>\n",
     "1\n",
     "3 2\n",
     "6 5 4\n",
@@ -1387,6 +1703,34 @@
     "</pre>\n",
     "</body>\n",
     "</html>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "9c6ce0dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 4\n",
+      "1 \n",
+      "3 2 \n",
+      "6 5 4 \n",
+      "10 9 8 7 \n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "num = 0\n",
+    "for row in range(n):\n",
+    "    for col in range(num+row+1, num, -1):\n",
+    "        print(col, end=' ')\n",
+    "        num += 1\n",
+    "    print()"
    ]
   },
   {
@@ -1402,6 +1746,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 30:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 5</h2>\n",
     "12345\n",
     "1234\n",
     "123\n",
@@ -1411,6 +1756,33 @@
     "</pre>\n",
     "</body>\n",
     "</html>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "f8a6acec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "12345\n",
+      "1234\n",
+      "123\n",
+      "12\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(n-row):\n",
+    "        print(col+1, end='')\n",
+    "    print()"
    ]
   },
   {
@@ -1426,6 +1798,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 31:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 5</h2>\n",
     "1\n",
     "12\n",
     "1 3\n",
@@ -1435,6 +1808,36 @@
     "</pre>\n",
     "</body>\n",
     "</html>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "bc3e8945",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "1\n",
+      "12\n",
+      "1 3\n",
+      "1  4\n",
+      "12345\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(row+1):\n",
+    "        if col in [0, row] or row == n-1:\n",
+    "            print(col+1, end='')\n",
+    "        else:\n",
+    "            print(' ', end='')\n",
+    "    print()"
    ]
   },
   {
@@ -1450,6 +1853,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 32:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 5</h2>\n",
     "1 1 1 1 1 \n",
     "2 2 2 2 \n",
     "3 3 3 \n",
@@ -1459,6 +1863,36 @@
     "</pre>\n",
     "</body>\n",
     "</html>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "68901182",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "1 1 1 1 1 \n",
+      "2 2 2 2 \n",
+      "3 3 3 \n",
+      "4 4 \n",
+      "5 \n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(2*(n-row)):\n",
+    "        if col%2 == 0:\n",
+    "            print(row+1, end='')\n",
+    "        else:\n",
+    "            print(' ', end='')\n",
+    "    print()"
    ]
   },
   {
@@ -1474,6 +1908,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 33:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 7</h2>\n",
     "0  \n",
     "0 1  \n",
     "0 2 4  \n",
@@ -1486,6 +1921,14 @@
     "</body>\n",
     "</html>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f4bcc11",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
