--- a/Pattern Questions for Practice 2 Solutions.ipynb
+++ b/Pattern Questions for Practice 2 Solutions.ipynb
@@ -1418,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "e3c40606",
    "metadata": {},
    "outputs": [
@@ -1426,11 +1426,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter Number: 5\n",
-      "*****\n",
-      "*  *\n",
+      "Enter Number: 4\n",
+      "* * * *\n",
+      "*   *\n",
       "* *\n",
-      "**\n",
       "*\n"
      ]
     }
@@ -1438,8 +1437,8 @@
    "source": [
     "n = int(input('Enter Number: '))\n",
     "for row in range(n):\n",
-    "    for col in range(n-row):\n",
-    "        if col in [0, n-row-1] or row==0:\n",
+    "    for col in range(2*(n-row)-1):\n",
+    "        if (col in [0, 2*(n-row-1)] or row==0) and col%2==0:\n",
     "            print('*', end='')\n",
     "        else:\n",
     "            print(' ', end='')\n",
@@ -1924,11 +1923,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "5f4bcc11",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 7\n",
+      "0\n",
+      "0 1\n",
+      "0 2 4\n",
+      "0 3 6 9\n",
+      "0 4 8 12 16\n",
+      "0 5 10 15 20 25\n",
+      "0 6 12 18 24 30 36\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(2*row+1):\n",
+    "        if col%2==0:\n",
+    "            print(int((col*row)/2), end='')\n",
+    "        else:\n",
+    "            print(' ', end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1943,6 +1966,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 34:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 5</h2>\n",
     "1\n",
     "1 1\n",
     "1 2 1\n",
@@ -1952,6 +1976,45 @@
     "</pre>\n",
     "</body>\n",
     "</html>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "ed0d03e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "1 \n",
+      "1 1 \n",
+      "1 2 1 \n",
+      "1 3 3 1 \n",
+      "1 4 6 4 1 \n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "num = [1]\n",
+    "new = [1]\n",
+    "for row in range(n):\n",
+    "    print(num[0], end=' ')\n",
+    "    new.append(num[0])\n",
+    "    \n",
+    "    if row > 1:\n",
+    "        for col in range(len(num)-1):\n",
+    "            print(num[col]+num[col+1], end=' ')\n",
+    "            new.append(num[col]+num[col+1])\n",
+    "    if len(num) != 1:\n",
+    "        print(num[0], end=' ')\n",
+    "        new.append(num[0])\n",
+    "    num = new.copy()\n",
+    "    new = []\n",
+    "    print()"
    ]
   },
   {
@@ -1967,6 +2030,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 35:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 5</h2>\n",
     "    1\n",
     "   1 2\n",
     "  1   2\n",
@@ -1983,6 +2047,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "4490c847",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "    1\n",
+      "   1 2\n",
+      "  1   2\n",
+      " 1     2\n",
+      "1       2\n",
+      " 1     2\n",
+      "  1   2\n",
+      "   1 2\n",
+      "    1\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(2*n-1):\n",
+    "    if row < n:\n",
+    "        nums = 2*row+1\n",
+    "        spaces = n-row-1\n",
+    "    else:\n",
+    "        nums -= 2\n",
+    "        spaces += 1\n",
+    "    for col in range(spaces):\n",
+    "        print(' ', end='')\n",
+    "    for col in range(nums):\n",
+    "        if col==0:\n",
+    "            print(1, end='')\n",
+    "        elif col==nums-1:\n",
+    "            print(2, end='')\n",
+    "        else:\n",
+    "            print(' ', end='')\n",
+    "    print()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c95bc6cc",
    "metadata": {},
@@ -1995,6 +2103,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 36:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 5</h2>\n",
     "123456789\n",
     " 1234567\n",
     "  12345\n",
@@ -2004,6 +2113,38 @@
     "</pre>\n",
     "</body>\n",
     "</html>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "7e91fe8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "123456789\n",
+      " 1234567\n",
+      "  12345\n",
+      "   123\n",
+      "    1\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    num = 1\n",
+    "    for col in range(2*n-row-1):\n",
+    "        if col < row:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print(num, end='')\n",
+    "            num += 1\n",
+    "    print()"
    ]
   },
   {
