Add Solutions for patterns 37 to 43 in Practice File 2

--- a/Pattern Questions for Practice 2 Solutions.ipynb
+++ b/Pattern Questions for Practice 2 Solutions.ipynb
@@ -2160,6 +2160,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 37:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 5</h2>\n",
     "1\n",
     "2 6\n",
     "3 7 10 \n",
@@ -2169,6 +2170,38 @@
     "</pre>\n",
     "</body>\n",
     "</html>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "fbf25474",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "1\n",
+      "2 6\n",
+      "3 7 10\n",
+      "4 8 11 13\n",
+      "5 9 12 14 15\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    num = row + 1\n",
+    "    for col in range(2*row+1):\n",
+    "        if col%2==0:\n",
+    "            print(num, end='')\n",
+    "            num += n-1-int(col/2)\n",
+    "        else:\n",
+    "            print(' ', end='')\n",
+    "    print()"
    ]
   },
   {
@@ -2184,6 +2217,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 38:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 5</h2>\n",
     "    1\n",
     "   12\n",
     "  123\n",
@@ -2193,6 +2227,38 @@
     "</pre>\n",
     "</body>\n",
     "</html>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "1aba0051",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "    1\n",
+      "   12\n",
+      "  123\n",
+      " 1234\n",
+      "12345\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    num = 1\n",
+    "    for col in range(n):\n",
+    "        if col < n-row-1:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print(num, end='')\n",
+    "            num += 1\n",
+    "    print()"
    ]
   },
   {
@@ -2220,6 +2286,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "d4ccb4b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "    10\n",
+      "   1010\n",
+      "  101010\n",
+      " 10101010\n",
+      "1010101010\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(n):\n",
+    "        if col < n-row-1:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print('10', end='')\n",
+    "    print()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "99d61766",
    "metadata": {},
@@ -2232,6 +2328,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 40:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 6</h2>\n",
     "     1\n",
     "    2 2\n",
     "   3 3 3\n",
@@ -2250,6 +2347,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "8d0f7e9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 6\n",
+      "     1\n",
+      "    2 2\n",
+      "   3 3 3\n",
+      "  4 4 4 4\n",
+      " 5 5 5 5 5\n",
+      "6 6 6 6 6 6\n",
+      " 5 5 5 5 5\n",
+      "  4 4 4 4\n",
+      "   3 3 3\n",
+      "    2 2\n",
+      "     1\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(2*n-1):\n",
+    "    if row < n:\n",
+    "        middle = 2*row+1\n",
+    "        left_spaces = n-row-1\n",
+    "        num = row + 1\n",
+    "    else:\n",
+    "        middle -= 2\n",
+    "        left_spaces += 1\n",
+    "        num -= 1\n",
+    "    for col in range(left_spaces):\n",
+    "        print(' ', end='')\n",
+    "    for col in range(middle):\n",
+    "        if col%2!=0:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print(num, end='')\n",
+    "    print()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "4af18a34",
    "metadata": {},
@@ -2262,6 +2405,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 41:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 5</h2>\n",
     "1 \n",
     "33 \n",
     "555 \n",
@@ -2271,6 +2415,33 @@
     "</pre>\n",
     "</body>\n",
     "</html>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "882fbbfd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "1\n",
+      "33\n",
+      "555\n",
+      "7777\n",
+      "99999\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(row+1):\n",
+    "        print(2*row+1, end='')\n",
+    "    print()"
    ]
   },
   {
@@ -2286,6 +2457,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 42:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 5</h2>\n",
     "1 \n",
     "1 2 1 \n",
     "1 2 3 2 1 \n",
@@ -2295,6 +2467,41 @@
     "</pre>\n",
     "</body>\n",
     "</html>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "ca3a7304",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "1\n",
+      "1 2 1\n",
+      "1 2 3 2 1\n",
+      "1 2 3 4 3 2 1\n",
+      "1 2 3 4 5 4 3 2 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    num = 0\n",
+    "    for col in range(4*row+1):\n",
+    "        if col%2!=0:\n",
+    "            print(' ', end='')\n",
+    "        elif col < 2*row+1:\n",
+    "            num += 1\n",
+    "            print(num, end='')\n",
+    "        else:\n",
+    "            num -= 1\n",
+    "            print(num, end='')\n",
+    "    print()"
    ]
   },
   {
@@ -2310,6 +2517,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 43:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 5</h2>\n",
     "12345\n",
     "2  5\n",
     "3 5\n",
@@ -2319,6 +2527,36 @@
     "</pre>\n",
     "</body>\n",
     "</html>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "2f81bc53",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "12345\n",
+      "2  5\n",
+      "3 5\n",
+      "45\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(row+1, n+1):\n",
+    "        if col in [row+1, n] or row==0:\n",
+    "            print(col, end='')\n",
+    "        else:\n",
+    "            print(' ', end='')\n",
+    "    print()"
    ]
   },
   {
@@ -2334,6 +2572,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 44:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 5</h2>\n",
     "1 \n",
     "2 3 4 \n",
     "5 6 7 8 9\n",
@@ -2342,6 +2581,14 @@
     "</body>\n",
     "</html>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39ba1980",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2366,6 +2613,14 @@
     "</body>\n",
     "</html>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25a8f114",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2400,6 +2655,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa025b09",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "67a9532f",
    "metadata": {},
@@ -2422,6 +2685,14 @@
     "</body>\n",
     "</html>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dccaa8ef",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2449,6 +2720,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62a03fb0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "96b61284",
    "metadata": {},
@@ -2473,6 +2752,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa46b9fc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "23fb03da",
    "metadata": {},
@@ -2495,6 +2782,14 @@
     "</body>\n",
     "</html>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c8286c7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2525,6 +2820,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b33ed31b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "2d5ebd5c",
    "metadata": {},
@@ -2548,6 +2851,14 @@
     "</body>\n",
     "</html>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "782df51a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2578,6 +2889,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "338a2bee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "a5cb7e42",
    "metadata": {},
@@ -2603,6 +2922,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "917b6b9c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "bcd90dae",
    "metadata": {},
@@ -2625,6 +2952,14 @@
     "</body>\n",
     "</html>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ecb8e07",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2655,6 +2990,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5e6a3f3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "a1a7f7c7",
    "metadata": {},
@@ -2681,6 +3024,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae642b3d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "a1960aee",
    "metadata": {},
@@ -2705,6 +3056,14 @@
     "</body>\n",
     "</html>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b7ebab6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2735,6 +3094,14 @@
     "</body>\n",
     "</html>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4c11e76",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
